--- a/src/index.css
+++ b/src/index.css
@@ -9,8 +9,8 @@
   --white: #f8f8f8;
   --redprimary: #ff3131;
   --redsecondary: #ff8888;
-  --oranjeprimary: #ff914d;
-  --oranjesecondary: #fdb78c;
+  --orangeprimary: #ff914d;
+  --orangesecondary: #fdb78c;
   --font-family: "Chakra UI", "sans-serif";
 }
 
