--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,7 @@
   --blackgb: #060215;
   --gray100: #e6e5e5;
   --gray300: #c2bdbd;
-  --white: #f8f8f8;
+  --white: white;
   --redprimary: #ff3131;
   --redsecondary: #ff8888;
   --redapproval: #c53030;
