nuevo color blanco

--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,7 @@
   --orangesecondary: #fdb78c;
   --bg-status-square: #847c7b;
   --font-family: "Lato", "Chakra UI", "sans-serif";
+  --bg-button:#F2F2F2;
 }
 
 body {
