--- a/src/index.css
+++ b/src/index.css
@@ -14,7 +14,7 @@
   --orangesecondary: #fdb78c;
   --bg-status-square: #847c7b;
   --font-family: "Lato", "Chakra UI", "sans-serif";
-  --bg-button:#F2F2F2;
+  --bg-button: #f2f2f2;
 }
 
 body {
@@ -62,7 +62,7 @@ body {
 
 .swiper-button-prev,
 .swiper-button-next {
-  color: var(--redprimary); 
+  color: var(--redprimary);
   position: absolute;
   z-index: 10;
   user-select: none;
@@ -72,18 +72,38 @@ body {
   cursor: pointer;
 }
 
-input[type="date"]::-webkit-calendar-picker-indicator,
-input[type="time"]::-webkit-calendar-picker-indicator {
+.react-datepicker-time__header {
   display: none;
+}
+
+.react-datepicker__current-month,
+.react-datepicker__current-day {
+  color: var(--orangeprimary);
+}
+
+.react-datepicker-time__header .react-datepicker-time__header__select {
+  font-size: inherit;
+}
+
+.react-datepicker-time__input-container input {
+  width: auto;
+  text-align: center;
+}
+
+.react-datepicker__day--selected,
+.react-datepicker__day--keyboard-selected,
+.react-datepicker__time-list-item--selected,
+.react-datepicker__day--selected {
+  background-color: var(--orangeprimary) !important;
+  color: var(--white) !important;
+}
+
+.react-datepicker__day-name {
+  color: var(--orangeprimary);
 }
 
 input[type="number"]::-webkit-outer-spin-button,
 input[type="number"]::-webkit-inner-spin-button {
   -webkit-appearance: none;
   margin: 0;
-}
-
-input[type="number"] {
-  -moz-appearance: textfield;
-  appearance: textfield;
 }
