--- a/src/index.css
+++ b/src/index.css
@@ -120,7 +120,6 @@ input[type="number"]::-webkit-inner-spin-button {
   margin: 0;
 }
 
-
 /*FONDO*/
 
 .diagonal-bg {
@@ -134,11 +133,25 @@ input[type="number"]::-webkit-inner-spin-button {
 
 .diagonal-bg::before,
 .diagonal-bg::after {
-  content: '';
+  content: "";
   position: absolute;
   width: 100%;
   height: 100%;
   clip-path: polygon(0 0, 160% 0, 0 35%);
+}
+
+@media (min-width: 768px) {
+  .diagonal-bg::before,
+  .diagonal-bg::after {
+    clip-path: polygon(0 0, 145% 0, 0 42%);
+  }
+}
+
+@media (min-width: 1024px) {
+  .diagonal-bg::before,
+  .diagonal-bg::after {
+    clip-path: polygon(0 0, 135% 0, 0 48%);
+  }
 }
 
 .diagonal-bg::before {
