--- a/src/index.css
+++ b/src/index.css
@@ -74,15 +74,16 @@ main {
 
 .swiper-button-prev,
 .swiper-button-next {
-  color: var(--redprimary);
-  position: absolute;
-  z-index: 10;
-  user-select: none;
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  cursor: pointer;
+  color: var(--redprimary) !important;
+  position: absolute !important;
+  z-index: 10 !important;
+  user-select: none !important;
+  -webkit-user-select: none !important;
+  -moz-user-select: none !important;
+  -ms-user-select: none !important;
+  cursor: pointer !important;
 }
+
 
 .react-datepicker-time__header {
   display: none;
