--- a/src/index.css
+++ b/src/index.css
@@ -74,15 +74,16 @@ main {
 
 .swiper-button-prev,
 .swiper-button-next {
-  color: var(--redprimary);
-  position: absolute;
-  z-index: 10;
-  user-select: none;
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  cursor: pointer;
+  color: var(--redprimary) !important;
+  position: absolute !important;
+  z-index: 10 !important;
+  user-select: none !important;
+  -webkit-user-select: none !important;
+  -moz-user-select: none !important;
+  -ms-user-select: none !important;
+  cursor: pointer !important;
 }
+
 
 .react-datepicker-time__header {
   display: none;
@@ -120,7 +121,6 @@ input[type="number"]::-webkit-inner-spin-button {
   margin: 0;
 }
 
-
 /*FONDO*/
 
 .diagonal-bg {
@@ -134,11 +134,25 @@ input[type="number"]::-webkit-inner-spin-button {
 
 .diagonal-bg::before,
 .diagonal-bg::after {
-  content: '';
+  content: "";
   position: absolute;
   width: 100%;
   height: 100%;
   clip-path: polygon(0 0, 160% 0, 0 35%);
+}
+
+@media (min-width: 768px) {
+  .diagonal-bg::before,
+  .diagonal-bg::after {
+    clip-path: polygon(0 0, 145% 0, 0 42%);
+  }
+}
+
+@media (min-width: 1024px) {
+  .diagonal-bg::before,
+  .diagonal-bg::after {
+    clip-path: polygon(0 0, 135% 0, 0 48%);
+  }
 }
 
 .diagonal-bg::before {
