--- a/src/index.css
+++ b/src/index.css
@@ -34,6 +34,10 @@ main {
   flex: 1;
 }
 
+.capitalize-first {
+  text-transform: capitalize;
+}
+
 .gradient-red {
   background-image: linear-gradient(
     to right,
@@ -91,7 +95,7 @@ main {
 
 .react-datepicker__current-month,
 .react-datepicker__current-day {
-  color: var(--orangeprimary);
+  color: var(--orangeprimary) !important;
 }
 
 .react-datepicker-time__header .react-datepicker-time__header__select {
@@ -112,7 +116,7 @@ main {
 }
 
 .react-datepicker__day-name {
-  color: var(--orangeprimary);
+  color: var(--orangeprimary) !important;
 }
 
 input[type="number"]::-webkit-outer-spin-button,
@@ -191,7 +195,7 @@ input[type="number"]::-webkit-inner-spin-button {
 }
 
 .indicator {
-  background-color: #ccc;
+  background-color: var(--white);
   border: none;
   border-radius: 50%;
   width: 12px;
@@ -232,3 +236,37 @@ input[type="number"]::-webkit-inner-spin-button {
 ::-webkit-scrollbar-thumb:hover {
   background: var(--redapproval);
 }
+
+/*Loading*/
+
+.loader {
+  width: 48px;
+  height: 48px;
+  border-radius: 50%;
+  display: inline-block;
+  border-top: 4px solid var(--orangeprimary);
+  border-right: 4px solid transparent;
+  box-sizing: border-box;
+  animation: rotation 1s linear infinite;
+}
+.loader::after {
+  content: '';  
+  box-sizing: border-box;
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 48px;
+  height: 48px;
+  border-radius: 50%;
+  border-left: 4px solid var(--redprimary);
+  border-bottom: 4px solid transparent;
+  animation: rotation 0.5s linear infinite reverse;
+}
+@keyframes rotation {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+} 
